--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
       <input type="text" id="nombre" placeholder="Nombre del estudiante" />
       <input type="email" id="correo" placeholder="Correo" />
       <input type="text" id="clase" placeholder="Clase" />
-      <button onclick="agregarEstudiante()">Agregar</button>
+      <button id="btnAgregarActualizar">Agregar</button>
     </section>
 
     <section class="card">
